--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Lauren Van Klaveren"
 title_separator          : "-"
 name                     : &name "Lauren VK"
 description              : &description "personal description"
-url                      : https://github.com/laurenvkto/laurenvkto.github.io.git # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://laurenvkto.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "laurenvkto/laurenvkto.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
